--- a/docker/local.env
+++ b/docker/local.env
@@ -11,5 +11,5 @@ NGINX_SSL_CERT_PATH=/etc/letsencrypt/live/primero/fullchain.pem
 NGINX_SSL_KEY_PATH=/etc/letsencrypt/live/primero/privkey.pem
 USE_LETS_ENCRYPT=true
 LETS_ENCRYPT_DOMAIN=cpims-sindh.septemsystems.com
-LETS_ENCRYPT_EMAIL=sara.raza@xprolabs.com
+LETS_ENCRYPT_EMAIL=muhammad.zunair@xprolabs.com
 PRIMERO_DEFAULT_USERS=true
