--- a/ansible/roles/application-primero/tasks/main.yml
+++ b/ansible/roles/application-primero/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: 'Pull Primero from Git'
   git:
-    repo: '{{ primero_repo|default("https://sararaza410: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@github.com/Khizar-Hussian/primero-pakistan-sindh.git") }}'
+    repo: '{{ primero_repo|default("https://zunairzexprolabs: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@github.com/Khizar-Hussian/primero-pakistan-sindh.git") }}'
     dest: '/srv/primero/'
     version: 'staging'
     key_file: '/root/.ssh/primero_deployment_key'
